nixidy/generated/prod/obico/Deployment-obico-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: redis
    app.kubernetes.io/instance: obico
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: obico
  name: obico-redis
  namespace: printing
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: redis
      app.kubernetes.io/instance: obico
      app.kubernetes.io/name: obico
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: redis
        app.kubernetes.io/instance: obico
        app.kubernetes.io/name: obico
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - --maxmemory
            - 256mb
            - --proactor_threads
            - "1"
          image: ghcr.io/dragonflydb/dragonfly:v1.25.5
          name: redis
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: obico
