nixidy/generated/prod/obico/Service-obico-obico-ml.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: obico
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: obico
    app.kubernetes.io/service: obico-obico-ml
  name: obico-obico-ml
  namespace: printing
spec:
  ports:
    - name: http
      port: 3333
      protocol: TCP
      targetPort: 3333
  selector:
    app.kubernetes.io/controller: ml
    app.kubernetes.io/instance: obico
    app.kubernetes.io/name: obico
  type: ClusterIP
