nixidy/generated/prod/obico/Service-obico-obico-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: obico
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: obico
    app.kubernetes.io/service: obico-obico-redis
  name: obico-obico-redis
  namespace: printing
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app.kubernetes.io/controller: redis
    app.kubernetes.io/instance: obico
    app.kubernetes.io/name: obico
  type: ClusterIP
