nixidy/generated/prod/obico/Service-obico-obico-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: obico
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: obico
    app.kubernetes.io/service: obico-obico-web
  name: obico-obico-web
  namespace: printing
spec:
  ports:
    - name: http
      port: 3334
      protocol: TCP
      targetPort: 3334
  selector:
    app.kubernetes.io/controller: web
    app.kubernetes.io/instance: obico
    app.kubernetes.io/name: obico
  type: ClusterIP
