nixidy/generated/prod/obico/HTTPRoute-obico.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: obico
  namespace: printing
spec:
  hostnames:
    - obico.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: oauth2-proxy
          namespace: identity
          port: 4180
